# python_cli_parser_comparison

./: pyproject.toml
src/: hello_argparse.py  hello_click.py  hello_docopt.py  hello_fire.py  report.ipynb
