[tool.poetry]
name = "test_command_line_parser"
version = "0.1.0"
description = ""
authors = ["suk1yak1 <40166140+suk1yak1@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
click = "^7.1.2"
fire = "^0.4.0"
Baker = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
